--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^22.15.24",
     "@types/node-fetch": "^2.6.12",
     "concurrently": "^9.1.2",
@@ -30,9 +31,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.5.0",
     "express-validator": "^7.2.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
-    "node-fetch": "^2.7.0"
+    "morgan": "^1.10.0",
+    "node-fetch": "^2.7.0",
+    "zod": "^3.25.42"
   }
 }
