integrating the back and the front-end

--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "feedbackhub",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.ts",
   "scripts": {
-  "dev:dashboard": "cd apps/dashboard && npm run dev",
-  "dev:widget": "cd apps/widget && npm run dev"
-},
+    "dev:dashboard": "cd apps/dashboard && npm run dev",
+    "dev:widget": "cd apps/widget && npm run dev"
+  },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {}
 }
