--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -6,26 +6,34 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
+    "lint": "eslint . --config eslint.config.ts",
     "preview": "vite preview"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-switch": "^1.2.5",
     "@tailwindcss/vite": "^4.1.7",
+    "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "framer-motion": "^12.14.0",
+    "history": "^5.3.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.57.0",
-    "react-router-dom": "^7.6.1",
+    "react-hot-toast": "^2.5.2",
+    "react-lottie-player": "^2.1.0",
+    "react-router-dom": "^7.6.2",
     "recharts": "^2.15.3",
     "tailwindcss": "^4.1.7",
-    "zod": "^3.25.48"
+    "zod": "^3.25.48",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/axios": "^0.14.4",
     "@types/node": "^22.15.30",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.6",
