--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -13,6 +13,8 @@
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-switch": "^1.2.5",
     "@tailwindcss/vite": "^4.1.7",
+    "@tanstack/react-query": "^5.90.16",
+    "@tanstack/react-query-devtools": "^5.91.2",
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "framer-motion": "^12.14.0",
